erDiagram
    %% ============================================
    %% IMPLEMENTED — reflects backend/apps/flows/models.py
    %% Django's built-in User model is used for authentication
    %% ============================================

    USER {
        int id PK
        string email UK
        string username
        string password "hashed"
        boolean is_active
        boolean is_staff
        boolean is_superuser
        datetime date_joined
        datetime last_login
    }

    FLOW_EXECUTION {
        int id PK
        uuid flow_run_id UK "unique execution identifier"
        string flow_name "e.g. data-processing | credit-prediction"
        int triggered_by_id FK "references USER"
        string s3_input_path "S3 key for uploaded file"
        string s3_output_path "S3 key for output parquet"
        bigint row_count "populated after completion"
        decimal file_size_mb
        string status "PENDING|RUNNING|COMPLETED|FAILED (TextChoices)"
        float income "credit-prediction input — null for pipeline flows"
        int age "credit-prediction input — null for pipeline flows"
        int credit_score "credit-prediction input — null for pipeline flows"
        float employment_years "credit-prediction input — null for pipeline flows"
        json parameters "legacy blob — do not add new keys"
        string celery_task_id "for task revocation"
        text error_message
        datetime created_at
        datetime completed_at
    }

    PREDICTION_RESULT {
        int id PK
        int execution_id FK "OneToOne → FLOW_EXECUTION"
        int scoring_model_id FK "nullable → SCORING_MODEL"
        float score "weighted composite score 0–1"
        string classification "Approved|Review|Declined"
        float confidence "score * 100"
        datetime scored_at
    }

    SCORING_MODEL {
        int id PK
        string version UK "e.g. 1.0"
        text description
        json weights "factor weights e.g. {credit_score: 0.40, income: 0.30, ...}"
        json thresholds "classification thresholds e.g. {approved: 0.70, review: 0.50}"
        boolean is_active "only one active model at a time"
        datetime created_at
        int created_by_id FK "nullable → USER"
    }

    EXECUTION_STEP {
        int id PK
        int execution_id FK "references FLOW_EXECUTION"
        string step_name "e.g. ingest | validate | transform | aggregate"
        smallint step_index "0-based step order"
        string status "PENDING|RUNNING|COMPLETED|FAILED"
        datetime started_at
        datetime completed_at
        string output_s3_path
        text error_message
    }

    USER_PROFILE {
        int id PK
        int user_id FK "OneToOne → USER"
        boolean notify_on_failure "default true"
        boolean notify_on_success "default false"
        boolean notify_in_app "default true"
        boolean notify_via_email "default true"
        int mcp_token_budget "nullable; overrides MCP_SESSION_TOKEN_BUDGET setting"
    }

    INPUT_PRESET {
        int id PK
        int user_id FK "references USER"
        string name "user-defined label"
        json input_values "prediction field values"
        datetime created_at
    }

    NOTIFICATION {
        int id PK
        int user_id FK "references USER"
        string notification_type "EXECUTION_FAILED|EXECUTION_COMPLETED|SYSTEM"
        text message
        int related_execution_id FK "nullable → FLOW_EXECUTION"
        boolean is_read "default false"
        datetime created_at
    }

    FEATURE_FLAG {
        int id PK
        string name UK "slug"
        text description
        boolean is_enabled "global on/off fallback"
        smallint rollout_percentage "0–100; 0 = disabled"
    }

    FEATURE_FLAG_USERS {
        int featureflag_id FK
        int user_id FK
    }

    USER_API_KEY {
        int id PK
        int user_id FK "references USER"
        string provider "ANTHROPIC|LLAMA_OPENAI (TextChoices)"
        text encrypted_key "Fernet-encrypted; write-only after save"
        string base_url "nullable; required for LLAMA_OPENAI"
        string label "user-defined name e.g. My Anthropic key"
        boolean is_active "default true"
        datetime created_at
        datetime updated_at
    }

    USER ||--o{ FLOW_EXECUTION : "triggers"
    USER ||--|| USER_PROFILE : "has"
    USER ||--o{ INPUT_PRESET : "owns"
    USER ||--o{ NOTIFICATION : "receives"
    USER ||--o{ SCORING_MODEL : "creates"
    USER ||--o{ USER_API_KEY : "owns"
    FLOW_EXECUTION ||--o| PREDICTION_RESULT : "has result"
    FLOW_EXECUTION ||--o{ EXECUTION_STEP : "has steps"
    FLOW_EXECUTION |o--o{ NOTIFICATION : "referenced by"
    PREDICTION_RESULT }o--o| SCORING_MODEL : "scored by"
    FEATURE_FLAG ||--o{ FEATURE_FLAG_USERS : "enabled for"
    USER ||--o{ FEATURE_FLAG_USERS : "included in"

    %% ============================================
    %% NOT YET IMPLEMENTED — planned for future epics
    %% ============================================

    %% EXECUTION_COMPARISON — persist named comparisons (Epic 4)
    %% ADMIN_ACTION_LOG — audit trail for admin actions (Epic 5)

    %% ============================================
    %% EPIC 17 — Conversational Dashboard Builder (BL-038)
    %% ============================================

    USER_DASHBOARD {
        int id PK
        int owner_id FK "references USER"
        string title
        boolean is_active "partial unique: one active per user"
        datetime created_at
        datetime updated_at
    }

    DASHBOARD_WIDGET {
        int id PK
        int dashboard_id FK "references USER_DASHBOARD"
        string widget_type "METRIC_CARD|LINE_CHART|BAR_CHART|TABLE|SCORE_DISTRIBUTION"
        string title
        json config "validated per widget_type via clean()"
        smallint position_x
        smallint position_y
        smallint width
        smallint height
        datetime created_at
    }

    MCP_SESSION {
        int id PK
        int user_id FK "references USER"
        int user_api_key_id FK "references USER_API_KEY"
        int tokens_used "cumulative for this session"
        int tokens_budget "from UserProfile override or MCP_SESSION_TOKEN_BUDGET"
        datetime started_at
        datetime ended_at "nullable; set on reset or budget exhaustion"
    }

    USER ||--o{ USER_DASHBOARD : "owns"
    USER_DASHBOARD ||--o{ DASHBOARD_WIDGET : "contains"
    USER ||--o{ MCP_SESSION : "starts"
    USER_API_KEY ||--o{ MCP_SESSION : "used by"

    %% ============================================
    %% EPIC 13 — Scoring Model Training & Promotion
    %% ============================================

    TRAINING_DATASET {
        int id PK
        string slug UK "auto-generated e.g. ds-<uuid4-prefix>"
        text description
        int row_count
        int seed "random seed for reproducibility"
        string s3_path "s3 key for data.parquet"
        string status "PENDING|RUNNING|COMPLETED|FAILED"
        datetime created_at
        int created_by_id FK "nullable → USER"
    }

    MODEL_TRAINING_RUN {
        int id PK
        string label "e.g. round_1"
        int dataset_id FK "references TRAINING_DATASET"
        string optimisation_target "GINI|KS|F1_REVIEW"
        string status "PENDING|RUNNING|COMPLETED|FAILED"
        json candidate_weights "null until complete"
        json candidate_thresholds "null until complete"
        float val_gini "validation Gini coefficient"
        float val_ks "validation KS statistic"
        float val_f1_review "validation F1 for Review class"
        boolean umap_enabled
        string artefacts_s3_path "s3 prefix for run artefacts"
        text error_message
        datetime created_at
        int created_by_id FK "nullable → USER"
    }

    MODEL_BACKTEST_RESULT {
        int id PK
        int training_run_id FK "OneToOne → MODEL_TRAINING_RUN"
        string status "PENDING|RUNNING|COMPLETED|FAILED"
        float accuracy
        float precision_approved
        float precision_review
        float precision_declined
        float recall_approved
        float recall_review
        float recall_declined
        float f1_approved
        float f1_review
        float f1_declined
        float gini "Gini coefficient on test fold"
        float ks_statistic "KS statistic on test fold"
        json confusion_matrix "3x3 row=actual col=predicted"
        string artefacts_s3_path "s3 prefix for backtest artefacts"
        datetime completed_at
    }

    MODEL_PROMOTION {
        int id PK
        int training_run_id FK "OneToOne → MODEL_TRAINING_RUN"
        int resulting_scoring_model_id FK "references SCORING_MODEL"
        int promoted_by_id FK "references USER"
        datetime promoted_at
        text notes "optional admin rationale"
    }

    USER ||--o{ TRAINING_DATASET : "creates"
    USER ||--o{ MODEL_TRAINING_RUN : "initiates"
    USER ||--o{ MODEL_PROMOTION : "approves"
    TRAINING_DATASET ||--o{ MODEL_TRAINING_RUN : "used in"
    MODEL_TRAINING_RUN ||--o| MODEL_BACKTEST_RESULT : "evaluated by"
    MODEL_TRAINING_RUN ||--o| MODEL_PROMOTION : "promoted via"
    MODEL_PROMOTION ||--|| SCORING_MODEL : "creates"

    %% ============================================
    %% IMPLEMENTED — Epic 13 models added to DB
    %% ============================================
    %% TRAINING_DATASET — implemented (BL-032)
    %% MODEL_TRAINING_RUN — implemented (BL-033)
    %% MODEL_BACKTEST_RESULT — implemented (BL-034)
    %% MODEL_PROMOTION — implemented (BL-036)
